--- a/Final_Proj_gheom.ipynb
+++ b/Final_Proj_gheom.ipynb
@@ -272,7 +272,7 @@
     "    gender_ratio['남자 비율'] = gender_ratio.get('M', 0) / gender_ratio.sum(axis=1)\n",
     "    gender_ratio['여자 비율'] = gender_ratio.get('F', 0) / gender_ratio.sum(axis=1)\n",
     "\n",
-    "    # 행정동별 10살 단위 나이대 비율 계산, 60대 이상은 '60대 이상'으로 묶음\n",
+    "    # 행정동별 10살 단위 나이대 비율 계산\n",
     "    age_ratio = df.groupby(['행정동명', '나이대']).size().unstack().fillna(0)\n",
     "    age_ratio = age_ratio.div(age_ratio.sum(axis=1), axis=0)\n",
     "\n",
@@ -283,12 +283,16 @@
     "        '여자 비율': gender_ratio['여자 비율']\n",
     "    })\n",
     "\n",
-    "    # 10살 단위 나이대 비율 열 추가 (0대, 10대, ..., 50대, 60대 이상)\n",
+    "    # 10살 단위 나이대 비율 열 추가 (0대, 10대, ..., 50대)\n",
     "    for age in range(0, 60, 10):\n",
     "        age_column_name = f'{age}대 비율'\n",
     "        result_df[age_column_name] = age_ratio.get(age, 0)  # 값이 없으면 0으로 채움\n",
-    "    # 60대 이상 비율 열 추가\n",
-    "    result_df['60대 이상 비율'] = age_ratio.loc[:, 60] if 60 in age_ratio.columns else 0\n",
+    "\n",
+    "    # 60대 이상 비율 추가: 60대, 70대, 80대 비율 합산\n",
+    "    result_df['60대 이상 비율'] = age_ratio.get(60, 0) + age_ratio.get(70, 0) + age_ratio.get(80, 0)\n",
+    "\n",
+    "    # 60대, 70대, 80대 비율 열 삭제\n",
+    "    result_df = result_df.drop(columns=['60대 비율', '70대 비율', '80대 비율'], errors='ignore')\n",
     "\n",
     "    # 결과를 리스트에 추가\n",
     "    updated_dataframes.append(result_df)"
@@ -338,6 +342,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d7c8e06b-7edf-4e68-8a5b-b96a7b29428d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa71a17-f5ef-4c1a-b531-d951facdc960",
    "metadata": {},
    "outputs": [],
    "source": []
