--- a/scraper_v2.ipynb
+++ b/scraper_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "77cf2075-a32c-4977-bae4-ce64d69602ef",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "54a01a27-82b4-422b-927e-cb901f422da0",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "19197282-fa72-446c-a8de-9279e8351379",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "2d703b8d-32fb-4334-90ab-267a98e3a5ef",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "68214705-2ddc-413b-bebe-3ecd615fb9c7",
    "metadata": {},
    "outputs": [],
@@ -326,10 +326,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1f27be57-c32e-4d67-83ca-dd1b5db65ddb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TimeoutException' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 59\u001b[0m, in \u001b[0;36mWebScraper.scrap_pop_total\u001b[1;34m(self, driver)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m \u001b[38;5;66;03m# 유입인구 불러오기\u001b[39;00m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# 로딩화면 사라질 때까지 대기\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m     WebDriverWait(driver, \u001b[38;5;241m20\u001b[39m)\u001b[38;5;241m.\u001b[39muntil(\n\u001b[0;32m     60\u001b[0m         EC\u001b[38;5;241m.\u001b[39minvisibility_of_element_located((By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//*[@id=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspr-010\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]/div[2]\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     61\u001b[0m     )\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;66;03m# 유입인구 요소 호출\u001b[39;00m\n",
+      "File \u001b[1;32mE:\\python\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\support\\wait.py:102\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m    101\u001b[0m     stacktrace \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(exc, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstacktrace\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m--> 102\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll)\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m time\u001b[38;5;241m.\u001b[39mmonotonic() \u001b[38;5;241m>\u001b[39m end_time:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m scraper\u001b[38;5;241m.\u001b[39mset_condition(driver, code_gu, code_dong, code_yrmnt):\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# 동 코드가 없으면 현재 구의 동 반복을 중단하고 다음 구로 넘어감\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     scraper\u001b[38;5;241m.\u001b[39mscrap_pop_total(driver)\n\u001b[0;32m     15\u001b[0m     scraper\u001b[38;5;241m.\u001b[39madd_row(data)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# 동 코드가 없으면 code_gu 반복문의 다음으로 넘어감\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "Cell \u001b[1;32mIn[35], line 82\u001b[0m, in \u001b[0;36mWebScraper.scrap_pop_total\u001b[1;34m(self, driver)\u001b[0m\n\u001b[0;32m     78\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnew_row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m유입인구\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pop_total\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnew_row\n\u001b[1;32m---> 82\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (NoSuchElementException, TimeoutException) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     83\u001b[0m     \u001b[38;5;66;03m# 웹 요소를 찾을 수 없거나 타임아웃이 발생하면 처리\u001b[39;00m\n\u001b[0;32m     84\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError: 유입인구 정보를 찾는 데 실패했습니다. \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     85\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'TimeoutException' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 월별로 스크래핑\n",
     "# 자치구 코드(code_gu)는 2(강남구)-26(중랑구),\n",
@@ -340,14 +358,16 @@
     "for code_gu in range(2, 26): \n",
     "    for code_dong in range(2, 28):\n",
     "        for code_yrmnt in range(4, 35):\n",
-    "            scraper.set_condition(driver, code_gu, code_dong, code_yrmnt)\n",
-    "\n",
-    "            # set_location에서 동 코드가 없는 경우, code_gu를 다음으로 넘어감\n",
+    "            # set_condition에서 동 코드가 없는 경우, 구 반복문으로 바로 넘어감\n",
     "            if not scraper.set_condition(driver, code_gu, code_dong, code_yrmnt):\n",
-    "                break  # 동 코드가 없으면 구 코드로 넘어감\n",
+    "                break  # 동 코드가 없으면 현재 구의 동 반복을 중단하고 다음 구로 넘어감\n",
     "                \n",
     "            scraper.scrap_pop_total(driver)\n",
     "            scraper.add_row(data)\n",
+    "        # 동 코드가 없으면 code_gu 반복문의 다음으로 넘어감\n",
+    "        else:\n",
+    "            continue\n",
+    "        break\n",
     "\n",
     "driver.quit()"
    ]
