--- a/scraper_v2.ipynb
+++ b/scraper_v2.ipynb
@@ -2,43 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "77cf2075-a32c-4977-bae4-ce64d69602ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: selenium in e:\\python\\anaconda3\\lib\\site-packages (4.24.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in e:\\python\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
-      "Requirement already satisfied: trio~=0.17 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (0.26.2)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (0.11.1)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (2024.8.30)\n",
-      "Requirement already satisfied: typing-extensions~=4.9 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (4.11.0)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
-      "Requirement already satisfied: attrs>=23.2.0 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (24.2.0)\n",
-      "Requirement already satisfied: sortedcontainers in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
-      "Requirement already satisfied: idna in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.7)\n",
-      "Requirement already satisfied: outcome in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.1.0)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
-      "Requirement already satisfied: cffi>=1.14 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.17.1)\n",
-      "Requirement already satisfied: wsproto>=0.14 in e:\\python\\anaconda3\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
-      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in e:\\python\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-      "Requirement already satisfied: pycparser in e:\\python\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in e:\\python\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
-      "Requirement already satisfied: webdriver_manager in e:\\python\\anaconda3\\lib\\site-packages (4.0.2)\n",
-      "Requirement already satisfied: requests in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (2.32.3)\n",
-      "Requirement already satisfied: python-dotenv in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (0.21.0)\n",
-      "Requirement already satisfied: packaging in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (24.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (2024.8.30)\n",
-      "Requirement already satisfied: pyperclip in e:\\python\\anaconda3\\lib\\site-packages (1.9.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install selenium\n",
     "!pip install webdriver_manager\n",
@@ -47,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "54a01a27-82b4-422b-927e-cb901f422da0",
    "metadata": {},
    "outputs": [],
@@ -65,57 +32,16 @@
     "import pyperclip\n",
     "\n",
     "import os\n",
-    "import time"
+    "import time\n",
+    "from datetime import timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "19197282-fa72-446c-a8de-9279e8351379",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>행정동명</th>\n",
-       "      <th>연월</th>\n",
-       "      <th>유입인구</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [행정동명, 연월, 유입인구]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -128,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2d703b8d-32fb-4334-90ab-267a98e3a5ef",
    "metadata": {},
    "outputs": [],
@@ -152,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "68214705-2ddc-413b-bebe-3ecd615fb9c7",
    "metadata": {},
    "outputs": [],
@@ -176,6 +102,9 @@
     "            )\n",
     "        \n",
     "        # 옵션 선택 버튼 누르기\n",
+    "        WebDriverWait(driver, 20).until(\n",
+    "                EC.element_to_be_clickable((By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/a'))\n",
+    "            )\n",
     "        driver.find_element(By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/a').click()\n",
     "        \n",
     "        # 보기상태(유입인구) 클릭\n",
@@ -199,9 +128,11 @@
     "        # 년월 선택\n",
     "        yrmnt = driver.find_element(By.XPATH, f'//*[@id=\"wrapper\"]/div/div[3]/div/div[2]/form/div[4]/div[2]/select/option[{code_yrmnt}]')\n",
     "        yrmnt.click()\n",
-    "        time.sleep(0.2)\n",
     "\n",
     "        # 조회버튼 클릭하여 조건 입력 완료\n",
+    "        WebDriverWait(driver, 20).until(\n",
+    "                EC.element_to_be_clickable((By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/div/div[2]/div/a'))\n",
+    "            )\n",
     "        driver.find_element(By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/div/div[2]/div/a').click()\n",
     "        time.sleep(0.2)\n",
     "\n",
@@ -238,8 +169,8 @@
     "    \n",
     "            return self.new_row\n",
     "    \n",
-    "        except (NoSuchElementException, TimeoutException) as e:\n",
-    "            # 웹 요소를 찾을 수 없거나 타임아웃이 발생하면 처리\n",
+    "        except NoSuchElementException:\n",
+    "            # 웹 요소를 찾을 수 없으면 처리\n",
     "            print(f\"Error: 유입인구 정보를 찾는 데 실패했습니다. {e}\")\n",
     "            return None\n",
     "    \n",
@@ -326,61 +257,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "1f27be57-c32e-4d67-83ca-dd1b5db65ddb",
+   "execution_count": null,
+   "id": "9b84468c-f2a4-429a-a059-44f81da17dbd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'TimeoutException' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 59\u001b[0m, in \u001b[0;36mWebScraper.scrap_pop_total\u001b[1;34m(self, driver)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m \u001b[38;5;66;03m# 유입인구 불러오기\u001b[39;00m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# 로딩화면 사라질 때까지 대기\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m     WebDriverWait(driver, \u001b[38;5;241m20\u001b[39m)\u001b[38;5;241m.\u001b[39muntil(\n\u001b[0;32m     60\u001b[0m         EC\u001b[38;5;241m.\u001b[39minvisibility_of_element_located((By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//*[@id=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspr-010\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]/div[2]\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     61\u001b[0m     )\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;66;03m# 유입인구 요소 호출\u001b[39;00m\n",
-      "File \u001b[1;32mE:\\python\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\support\\wait.py:102\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m    101\u001b[0m     stacktrace \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(exc, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstacktrace\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m--> 102\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll)\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m time\u001b[38;5;241m.\u001b[39mmonotonic() \u001b[38;5;241m>\u001b[39m end_time:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m scraper\u001b[38;5;241m.\u001b[39mset_condition(driver, code_gu, code_dong, code_yrmnt):\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# 동 코드가 없으면 현재 구의 동 반복을 중단하고 다음 구로 넘어감\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     scraper\u001b[38;5;241m.\u001b[39mscrap_pop_total(driver)\n\u001b[0;32m     15\u001b[0m     scraper\u001b[38;5;241m.\u001b[39madd_row(data)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# 동 코드가 없으면 code_gu 반복문의 다음으로 넘어감\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "Cell \u001b[1;32mIn[35], line 82\u001b[0m, in \u001b[0;36mWebScraper.scrap_pop_total\u001b[1;34m(self, driver)\u001b[0m\n\u001b[0;32m     78\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnew_row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m유입인구\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pop_total\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnew_row\n\u001b[1;32m---> 82\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (NoSuchElementException, TimeoutException) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     83\u001b[0m     \u001b[38;5;66;03m# 웹 요소를 찾을 수 없거나 타임아웃이 발생하면 처리\u001b[39;00m\n\u001b[0;32m     84\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError: 유입인구 정보를 찾는 데 실패했습니다. \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     85\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'TimeoutException' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 월별로 스크래핑\n",
-    "# 자치구 코드(code_gu)는 2(강남구)-26(중랑구),\n",
-    "# 행정동 코드(code_dong)는 유동적이나 2-28(송파)까지 존재\n",
-    "# 년월 코드는 4(2024년 7월)-35(2022년 1월)까지 역순으로 존재\n",
     "scraper = WebScraper()\n",
     "\n",
-    "for code_gu in range(2, 26): \n",
-    "    for code_dong in range(2, 28):\n",
-    "        for code_yrmnt in range(4, 35):\n",
-    "            # set_condition에서 동 코드가 없는 경우, 구 반복문으로 바로 넘어감\n",
-    "            if not scraper.set_condition(driver, code_gu, code_dong, code_yrmnt):\n",
-    "                break  # 동 코드가 없으면 현재 구의 동 반복을 중단하고 다음 구로 넘어감\n",
-    "                \n",
-    "            scraper.scrap_pop_total(driver)\n",
-    "            scraper.add_row(data)\n",
-    "        # 동 코드가 없으면 code_gu 반복문의 다음으로 넘어감\n",
-    "        else:\n",
-    "            continue\n",
-    "        break\n",
+    "# 스크래핑 시작 시간 기록\n",
+    "start_time = time.time()\n",
     "\n",
-    "driver.quit()"
+    "# 자치구 코드 범위 (2~26)\n",
+    "for code_gu in range(10, 12):  \n",
+    "    # 행정동 코드 범위 (2~28) - 행정동이 없을 시 중단해야 함\n",
+    "    for code_dong in range(14, 29):\n",
+    "        # 년월 코드 범위 (4~35, 역순)\n",
+    "        for code_yrmnt in range(4, 6):\n",
+    "            # 조건 설정 및 행정동과 연월 선택\n",
+    "            condition = scraper.set_condition(driver, code_gu, code_dong, code_yrmnt)\n",
+    "\n",
+    "            # 행정동이 없으면 다음 자치구로 넘어감\n",
+    "            if condition is False:\n",
+    "                break  # 현재 자치구에서 행정동이 없으므로 더 이상 진행하지 않고 다음 자치구로 넘어감\n",
+    "            \n",
+    "            # 유입인구 스크래핑 시도\n",
+    "            pop_total = scraper.scrap_pop_total(driver)\n",
+    "            \n",
+    "            if pop_total is not None:\n",
+    "                # 정상적으로 데이터를 가져오면 행 추가\n",
+    "                scraper.add_row(data)\n",
+    "            else:\n",
+    "                print(f\"유입인구 데이터를 불러오지 못했습니다. 자치구 코드 {code_gu}, 행정동 코드 {code_dong}, 년월 코드 {code_yrmnt}.\")\n",
+    "\n",
+    "# 웹드라이버 종료\n",
+    "driver.quit()\n",
+    "\n",
+    "# 스크래핑 종료 시간 기록 및 총 소요 시간 계산\n",
+    "end_time = time.time()\n",
+    "total_time = end_time - start_time\n",
+    "\n",
+    "# timedelta로 자동 변환\n",
+    "formatted_time = str(timedelta(seconds=total_time))\n",
+    "\n",
+    "# 시간, 분, 초 단위로 출력\n",
+    "print(f\"스크래핑 총 소요 시간: {formatted_time}\")\n",
+    "\n",
+    "# 유입인구 dtype정수형으로 변경\n",
+    "data['유입인구'] = data['유입인구'].str.replace(',', '').astype(int)\n",
+    "\n",
+    "# 수집 결과 csv로 저장\n",
+    "data.to_csv('pop.csv', index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c39cf7-52eb-485d-aa95-6b80984ae7a4",
+   "id": "f5b8539f-9810-459c-a06a-1f26e3662713",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 유입인구 dtype정수형으로 변경\n",
-    "data['유입인구'] = df['유입인구'].str.replace(',', '').astype(int)"
+    "data.info()"
    ]
   },
   {
@@ -390,17 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e4ca544-f53a-4107-addd-fa2ef1f13355",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_csv('pop.csv', index=False, encoding=utf-8)"
+    "data.head(6)"
    ]
   }
  ],
