--- a/scraper_v2.ipynb
+++ b/scraper_v2.ipynb
@@ -2,10 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "77cf2075-a32c-4977-bae4-ce64d69602ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: selenium in e:\\python\\anaconda3\\lib\\site-packages (4.24.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in e:\\python\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
+      "Requirement already satisfied: trio~=0.17 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (0.26.2)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (0.11.1)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (2024.8.30)\n",
+      "Requirement already satisfied: typing-extensions~=4.9 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (4.11.0)\n",
+      "Requirement already satisfied: websocket-client~=1.8 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (24.2.0)\n",
+      "Requirement already satisfied: sortedcontainers in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.7)\n",
+      "Requirement already satisfied: outcome in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.1.0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.17.1)\n",
+      "Requirement already satisfied: wsproto>=0.14 in e:\\python\\anaconda3\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in e:\\python\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in e:\\python\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in e:\\python\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
+      "Requirement already satisfied: webdriver_manager in e:\\python\\anaconda3\\lib\\site-packages (4.0.2)\n",
+      "Requirement already satisfied: requests in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (2.32.3)\n",
+      "Requirement already satisfied: python-dotenv in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (0.21.0)\n",
+      "Requirement already satisfied: packaging in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (24.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (2024.8.30)\n",
+      "Requirement already satisfied: pyperclip in e:\\python\\anaconda3\\lib\\site-packages (1.9.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install selenium\n",
     "!pip install webdriver_manager\n",
@@ -14,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "54a01a27-82b4-422b-927e-cb901f422da0",
    "metadata": {},
    "outputs": [],
@@ -38,10 +71,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "19197282-fa72-446c-a8de-9279e8351379",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>행정동명</th>\n",
+       "      <th>연월</th>\n",
+       "      <th>유입인구</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [행정동명, 연월, 유입인구]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -54,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2d703b8d-32fb-4334-90ab-267a98e3a5ef",
    "metadata": {},
    "outputs": [],
@@ -78,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "68214705-2ddc-413b-bebe-3ecd615fb9c7",
    "metadata": {},
    "outputs": [],
@@ -268,11 +343,11 @@
     "start_time = time.time()\n",
     "\n",
     "# 자치구 코드 범위 (2~26)\n",
-    "for code_gu in range(10, 12):  \n",
+    "for code_gu in range(2, 27):  \n",
     "    # 행정동 코드 범위 (2~28) - 행정동이 없을 시 중단해야 함\n",
-    "    for code_dong in range(14, 29):\n",
+    "    for code_dong in range(2, 29):\n",
     "        # 년월 코드 범위 (4~35, 역순)\n",
-    "        for code_yrmnt in range(4, 6):\n",
+    "        for code_yrmnt in range(4, 36):\n",
     "            # 조건 설정 및 행정동과 연월 선택\n",
     "            condition = scraper.set_condition(driver, code_gu, code_dong, code_yrmnt)\n",
     "\n",
