--- a/scraper_v2.ipynb
+++ b/scraper_v2.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "54a01a27-82b4-422b-927e-cb901f422da0",
    "metadata": {},
    "outputs": [],
@@ -59,6 +59,7 @@
     "from selenium.webdriver.chrome.service import Service\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.common.exceptions import NoSuchElementException\n",
+    "from selenium.common.exceptions import TimeoutException\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.common.by import By\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "id": "68214705-2ddc-413b-bebe-3ecd615fb9c7",
    "metadata": {},
    "outputs": [],
@@ -172,12 +173,12 @@
     "        # 년월 코드는 4(2024년 7월)-35(2022년 1월)까지 역순으로 존재\n",
     "        \n",
     "        # 로딩화면 사라질 때까지 대기\n",
-    "        WebDriverWait(driver, 20).until(\n",
+    "        WebDriverWait(driver, 30).until(\n",
     "                EC.invisibility_of_element_located((By.XPATH, '//*[@id=\"spr-010\"]/div[2]'))\n",
     "            )\n",
     "        \n",
     "        # 옵션 선택 버튼 누르기\n",
-    "        WebDriverWait(driver, 20).until(\n",
+    "        WebDriverWait(driver, 30).until(\n",
     "                EC.element_to_be_clickable((By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/a'))\n",
     "            )\n",
     "        driver.find_element(By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/a').click()\n",
@@ -205,7 +206,7 @@
     "        yrmnt.click()\n",
     "\n",
     "        # 조회버튼 클릭하여 조건 입력 완료\n",
-    "        WebDriverWait(driver, 20).until(\n",
+    "        WebDriverWait(driver, 30).until(\n",
     "                EC.element_to_be_clickable((By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/div/div[2]/div/a'))\n",
     "            )\n",
     "        driver.find_element(By.XPATH, '//*[@id=\"wrapper\"]/div/div[3]/div/div[2]/div/a').click()\n",
@@ -216,6 +217,22 @@
     "        self.new_row['연월'] = yrmnt.text\n",
     "\n",
     "        return self.new_row\n",
+    "\n",
+    "    def retry_set_condition(self, driver, code_gu, code_dong, code_yrmnt, retries):\n",
+    "    # set_condition 메서드를 재시도하는 함수.\n",
+    "        attempt = 0\n",
+    "        while attempt < retries:\n",
+    "            try:\n",
+    "                # 조건 설정 및 행정동과 연월 선택\n",
+    "                condition = scraper.set_condition(driver, code_gu, code_dong, code_yrmnt)\n",
+    "                return condition  # 성공 시 조건 반환\n",
+    "            except TimeoutException:\n",
+    "                attempt += 1\n",
+    "                print(f\"TimeoutException: 재시도 {attempt}/{retries} - 자치구 코드 {code_gu}, 행정동 코드 {code_dong}, 년월 코드 {code_yrmnt}\")\n",
+    "                if attempt == retries:\n",
+    "                    print(f\"Error: 최대 재시도 횟수를 초과했습니다. 자치구 코드 {code_gu}, 행정동 코드 {code_dong}, 년월 코드 {code_yrmnt}\")\n",
+    "                    return False  # 최대 재시도 횟수 초과 시 False 반환\n",
+    "            \n",
     "\n",
     "    def scrap_pop_total(self, driver):\n",
     "        try:\n",
@@ -258,6 +275,7 @@
     "            # 기타 모든 예외 처리\n",
     "            print(f\"Unexpected error: {e}\")\n",
     "            return None\n",
+    "\n",
     "\n",
     "    '''\n",
     "    # 동별 유입인구 테이블상에서 상위 100개 출발지까지밖에 조회되지 않으므로 아래 메서드는 포기\n",
@@ -333,33 +351,150 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b84468c-f2a4-429a-a059-44f81da17dbd",
+   "id": "f5b8539f-9810-459c-a06a-1f26e3662713",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "daa8b948-8231-4401-ad34-c318089c6d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>행정동명</th>\n",
+       "      <th>연월</th>\n",
+       "      <th>유입인구</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3514</th>\n",
+       "      <td>서울특별시 중랑구 망우본동</td>\n",
+       "      <td>2022년 06월</td>\n",
+       "      <td>1,949,785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3515</th>\n",
+       "      <td>서울특별시 중랑구 망우본동</td>\n",
+       "      <td>2022년 05월</td>\n",
+       "      <td>2,517,737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3516</th>\n",
+       "      <td>서울특별시 중랑구 망우본동</td>\n",
+       "      <td>2022년 04월</td>\n",
+       "      <td>1,930,287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3517</th>\n",
+       "      <td>서울특별시 중랑구 망우본동</td>\n",
+       "      <td>2022년 03월</td>\n",
+       "      <td>1,658,892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3518</th>\n",
+       "      <td>서울특별시 중랑구 망우본동</td>\n",
+       "      <td>2022년 02월</td>\n",
+       "      <td>1,430,822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3519</th>\n",
+       "      <td>서울특별시 중랑구 망우본동</td>\n",
+       "      <td>2022년 01월</td>\n",
+       "      <td>1,624,701</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                행정동명         연월       유입인구\n",
+       "3514  서울특별시 중랑구 망우본동  2022년 06월  1,949,785\n",
+       "3515  서울특별시 중랑구 망우본동  2022년 05월  2,517,737\n",
+       "3516  서울특별시 중랑구 망우본동  2022년 04월  1,930,287\n",
+       "3517  서울특별시 중랑구 망우본동  2022년 03월  1,658,892\n",
+       "3518  서울특별시 중랑구 망우본동  2022년 02월  1,430,822\n",
+       "3519  서울특별시 중랑구 망우본동  2022년 01월  1,624,701"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6177e694-6045-4ea1-989a-ea782dcff8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 구 코드 9의 동 코드 22가 존재하지 않습니다.\n",
+      "Error: 구 코드 9의 동 코드 23가 존재하지 않습니다.\n",
+      "Error: 구 코드 9의 동 코드 24가 존재하지 않습니다.\n",
+      "Error: 구 코드 9의 동 코드 25가 존재하지 않습니다.\n",
+      "Error: 구 코드 9의 동 코드 26가 존재하지 않습니다.\n",
+      "Error: 구 코드 9의 동 코드 27가 존재하지 않습니다.\n",
+      "Error: 구 코드 9의 동 코드 28가 존재하지 않습니다.\n",
+      "TimeoutException: 재시도 1/3 - 자치구 코드 10, 행정동 코드 2, 년월 코드 4\n"
+     ]
+    }
+   ],
    "source": [
     "scraper = WebScraper()\n",
     "\n",
     "# 스크래핑 시작 시간 기록\n",
     "start_time = time.time()\n",
     "\n",
-    "# 자치구 코드 범위 (2~26)\n",
-    "for code_gu in range(2, 27):  \n",
+    "# 자치구 코드 범위 (9~26) - 성북구(9)부터 다시 시작\n",
+    "for code_gu in range(9, 27):  \n",
     "    # 행정동 코드 범위 (2~28) - 행정동이 없을 시 중단해야 함\n",
     "    for code_dong in range(2, 29):\n",
     "        # 년월 코드 범위 (4~35, 역순)\n",
     "        for code_yrmnt in range(4, 36):\n",
-    "            # 조건 설정 및 행정동과 연월 선택\n",
-    "            condition = scraper.set_condition(driver, code_gu, code_dong, code_yrmnt)\n",
+    "             # 조건 설정 재시도\n",
+    "            condition = scraper.retry_set_condition(driver, code_gu, code_dong, code_yrmnt, retries=3)\n",
     "\n",
     "            # 행정동이 없으면 다음 자치구로 넘어감\n",
     "            if condition is False:\n",
-    "                break  # 현재 자치구에서 행정동이 없으므로 더 이상 진행하지 않고 다음 자치구로 넘어감\n",
-    "            \n",
+    "                break  # 동이 없거나 최대 재시도 횟수를 초과했을 경우 다음 자치구로 이동\n",
+    "\n",
     "            # 유입인구 스크래핑 시도\n",
     "            pop_total = scraper.scrap_pop_total(driver)\n",
-    "            \n",
+    "\n",
     "            if pop_total is not None:\n",
-    "                # 정상적으로 데이터를 가져오면 행 추가\n",
+    "                # 데이터프레임에 행 추가\n",
     "                scraper.add_row(data)\n",
     "            else:\n",
     "                print(f\"유입인구 데이터를 불러오지 못했습니다. 자치구 코드 {code_gu}, 행정동 코드 {code_dong}, 년월 코드 {code_yrmnt}.\")\n",
@@ -382,26 +517,6 @@
     "\n",
     "# 수집 결과 csv로 저장\n",
     "data.to_csv('pop.csv', index=False, encoding='utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5b8539f-9810-459c-a06a-1f26e3662713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daa8b948-8231-4401-ad34-c318089c6d9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.head(6)"
    ]
   }
  ],
