--- a/scraper_v2.ipynb
+++ b/scraper_v2.ipynb
@@ -2,43 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "77cf2075-a32c-4977-bae4-ce64d69602ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: selenium in e:\\python\\anaconda3\\lib\\site-packages (4.24.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in e:\\python\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
-      "Requirement already satisfied: trio~=0.17 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (0.26.2)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (0.11.1)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (2024.8.30)\n",
-      "Requirement already satisfied: typing-extensions~=4.9 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (4.11.0)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in e:\\python\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
-      "Requirement already satisfied: attrs>=23.2.0 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (24.2.0)\n",
-      "Requirement already satisfied: sortedcontainers in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
-      "Requirement already satisfied: idna in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.7)\n",
-      "Requirement already satisfied: outcome in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.1.0)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
-      "Requirement already satisfied: cffi>=1.14 in e:\\python\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.17.1)\n",
-      "Requirement already satisfied: wsproto>=0.14 in e:\\python\\anaconda3\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
-      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in e:\\python\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-      "Requirement already satisfied: pycparser in e:\\python\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in e:\\python\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
-      "Requirement already satisfied: webdriver_manager in e:\\python\\anaconda3\\lib\\site-packages (4.0.2)\n",
-      "Requirement already satisfied: requests in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (2.32.3)\n",
-      "Requirement already satisfied: python-dotenv in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (0.21.0)\n",
-      "Requirement already satisfied: packaging in e:\\python\\anaconda3\\lib\\site-packages (from webdriver_manager) (24.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in e:\\python\\anaconda3\\lib\\site-packages (from requests->webdriver_manager) (2024.8.30)\n",
-      "Requirement already satisfied: pyperclip in e:\\python\\anaconda3\\lib\\site-packages (1.9.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install selenium\n",
     "!pip install webdriver_manager\n",
@@ -47,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "54a01a27-82b4-422b-927e-cb901f422da0",
    "metadata": {},
    "outputs": [],
@@ -72,52 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "19197282-fa72-446c-a8de-9279e8351379",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>행정동명</th>\n",
-       "      <th>연월</th>\n",
-       "      <th>유입인구</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [행정동명, 연월, 유입인구]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -130,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2d703b8d-32fb-4334-90ab-267a98e3a5ef",
    "metadata": {},
    "outputs": [],
@@ -154,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "68214705-2ddc-413b-bebe-3ecd615fb9c7",
+   "execution_count": null,
+   "id": "daac3a8e-2084-4193-aeb0-48e04df1c1f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,9 +93,9 @@
     "    \n",
     "    def set_condition(self, driver, code_gu, code_dong, code_yrmnt):\n",
     "        # 조건(보기상태/조회지역/년월/주차) 입력 및 행정동, 연월을 new_row에 입력하는 메서드\n",
-    "        # 자치구 코드(code_gu)는 2(강남구)-26(중랑구),\n",
+    "        # 자치구 코드(code_gu)는 2(강남구)-26(강동구),\n",
     "        # 행정동 코드(code_dong)는 유동적이나 2-28(송파)까지 존재\n",
-    "        # 년월 코드는 4(2024년 7월)-35(2022년 1월)까지 역순으로 존재\n",
+    "        # 년월 코드는 4(2024년 7월)-35(2022년 1월)까지 역순으로 존재(대상 웹페이지에서 2023년 3월이 중복되어 있어 추후 제거 필요)\n",
     "        \n",
     "        # 로딩화면 사라질 때까지 대기\n",
     "        WebDriverWait(driver, 30).until(\n",
@@ -325,177 +250,56 @@
     "        print(self.new_row)\n",
     "    \n",
     "    def add_row(self, data):\n",
-    "        # 저장된 new_row를 데이터프레임에 행으로 추가\n",
-    "        data.loc[len(data)] = self.new_row"
+    "        # new_row의 딕셔너리를 데이터프레임 형태로 변환\n",
+    "        new_row_df = pd.DataFrame([self.new_row])\n",
+    "    \n",
+    "        # 데이터프레임에 행 추가 (reset_index 불필요)\n",
+    "        data = pd.concat([data, new_row_df], ignore_index=True)\n",
+    "    \n",
+    "        # new_row를 다시 초기화하여 다음 반복에 준비\n",
+    "        self.new_row = {'행정동명': [], '연월': [], '유입인구': []}\n",
+    "\n",
+    "        return data  # 업데이트된 데이터프레임 반환"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05db497-ffb8-4a03-baa5-e06dbb66b519",
-   "metadata": {},
+   "id": "901ce859-5c4b-4f5b-8fb9-5f9b8dea2cef",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "'''\n",
-    "# 테스트\n",
-    "scraper = WebScraper()\n",
-    "scraper.set_condition(driver, 3, 3, 10)\n",
-    "scraper.scrap_pop_total(driver)\n",
-    "# scraper.scrap_pop_gender(driver)\n",
-    "# scraper.print_row()\n",
-    "scraper.add_row(data)\n",
-    "data\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5b8539f-9810-459c-a06a-1f26e3662713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "daa8b948-8231-4401-ad34-c318089c6d9f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>행정동명</th>\n",
-       "      <th>연월</th>\n",
-       "      <th>유입인구</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3514</th>\n",
-       "      <td>서울특별시 중랑구 망우본동</td>\n",
-       "      <td>2022년 06월</td>\n",
-       "      <td>1,949,785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3515</th>\n",
-       "      <td>서울특별시 중랑구 망우본동</td>\n",
-       "      <td>2022년 05월</td>\n",
-       "      <td>2,517,737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3516</th>\n",
-       "      <td>서울특별시 중랑구 망우본동</td>\n",
-       "      <td>2022년 04월</td>\n",
-       "      <td>1,930,287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3517</th>\n",
-       "      <td>서울특별시 중랑구 망우본동</td>\n",
-       "      <td>2022년 03월</td>\n",
-       "      <td>1,658,892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3518</th>\n",
-       "      <td>서울특별시 중랑구 망우본동</td>\n",
-       "      <td>2022년 02월</td>\n",
-       "      <td>1,430,822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3519</th>\n",
-       "      <td>서울특별시 중랑구 망우본동</td>\n",
-       "      <td>2022년 01월</td>\n",
-       "      <td>1,624,701</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                행정동명         연월       유입인구\n",
-       "3514  서울특별시 중랑구 망우본동  2022년 06월  1,949,785\n",
-       "3515  서울특별시 중랑구 망우본동  2022년 05월  2,517,737\n",
-       "3516  서울특별시 중랑구 망우본동  2022년 04월  1,930,287\n",
-       "3517  서울특별시 중랑구 망우본동  2022년 03월  1,658,892\n",
-       "3518  서울특별시 중랑구 망우본동  2022년 02월  1,430,822\n",
-       "3519  서울특별시 중랑구 망우본동  2022년 01월  1,624,701"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.tail(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6177e694-6045-4ea1-989a-ea782dcff8cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: 구 코드 9의 동 코드 22가 존재하지 않습니다.\n",
-      "Error: 구 코드 9의 동 코드 23가 존재하지 않습니다.\n",
-      "Error: 구 코드 9의 동 코드 24가 존재하지 않습니다.\n",
-      "Error: 구 코드 9의 동 코드 25가 존재하지 않습니다.\n",
-      "Error: 구 코드 9의 동 코드 26가 존재하지 않습니다.\n",
-      "Error: 구 코드 9의 동 코드 27가 존재하지 않습니다.\n",
-      "Error: 구 코드 9의 동 코드 28가 존재하지 않습니다.\n",
-      "TimeoutException: 재시도 1/3 - 자치구 코드 10, 행정동 코드 2, 년월 코드 4\n"
-     ]
-    }
-   ],
-   "source": [
+    "# 스크래핑 진행\n",
+    "# 자치구 코드(code_gu)는 2(강남구)-26(강동구),\n",
+    "# 행정동 코드(code_dong)는 유동적이나 2-28(송파)까지 존재\n",
+    "# 년월 코드는 4(2024년 7월)-35(2022년 1월)까지 역순으로 존재(대상 웹페이지에서 2023년 3월이 중복되어 있어 추후 제거 필요)\n",
+    "\n",
     "scraper = WebScraper()\n",
     "\n",
     "# 스크래핑 시작 시간 기록\n",
     "start_time = time.time()\n",
     "\n",
-    "# 자치구 코드 범위 (9~26) - 성북구(9)부터 다시 시작\n",
-    "for code_gu in range(9, 27):  \n",
-    "    # 행정동 코드 범위 (2~28) - 행정동이 없을 시 중단해야 함\n",
-    "    for code_dong in range(2, 29):\n",
-    "        # 년월 코드 범위 (4~35, 역순)\n",
-    "        for code_yrmnt in range(4, 36):\n",
-    "             # 조건 설정 재시도\n",
+    "# 자치구 코드 범위 (25~25)\n",
+    "for code_gu in range(2, 27):  # 자치구 코드 범위 2-26\n",
+    "    for code_dong in range(2, 29):  # 행정동 코드 범위 2-28\n",
+    "        for code_yrmnt in range(4, 36):  # 년월 코드 범위 4-35\n",
+    "            # 조건 설정 재시도\n",
     "            condition = scraper.retry_set_condition(driver, code_gu, code_dong, code_yrmnt, retries=3)\n",
-    "\n",
-    "            # 행정동이 없으면 다음 자치구로 넘어감\n",
     "            if condition is False:\n",
-    "                break  # 동이 없거나 최대 재시도 횟수를 초과했을 경우 다음 자치구로 이동\n",
+    "                break  # 행정동이 없으면 다음 구로 이동\n",
     "\n",
-    "            # 유입인구 스크래핑 시도\n",
+    "            # 유입인구 스크래핑\n",
     "            pop_total = scraper.scrap_pop_total(driver)\n",
-    "\n",
+    "            \n",
     "            if pop_total is not None:\n",
+    "                # 디버깅: 현재 저장된 new_row 값 확인\n",
+    "                # print(f\"저장할 데이터: {scraper.new_row}\")\n",
+    "                \n",
     "                # 데이터프레임에 행 추가\n",
-    "                scraper.add_row(data)\n",
+    "                data = scraper.add_row(data)\n",
+    "              \n",
     "            else:\n",
     "                print(f\"유입인구 데이터를 불러오지 못했습니다. 자치구 코드 {code_gu}, 행정동 코드 {code_dong}, 년월 코드 {code_yrmnt}.\")\n",
     "\n",
@@ -510,11 +314,49 @@
     "formatted_time = str(timedelta(seconds=total_time))\n",
     "\n",
     "# 시간, 분, 초 단위로 출력\n",
-    "print(f\"스크래핑 총 소요 시간: {formatted_time}\")\n",
-    "\n",
-    "# 유입인구 dtype정수형으로 변경\n",
-    "data['유입인구'] = data['유입인구'].str.replace(',', '').astype(int)\n",
-    "\n",
+    "print(f\"스크래핑 총 소요 시간: {formatted_time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3cca110-658b-4626-b630-ca095bb4a0cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9107a5e6-5267-4df7-88cf-b4f78c97d7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연월 중복된 데이터 지우고 데이터 오름차순으로 정렬, 인덱스 리셋\n",
+    "data = data.drop_duplicates().sort_values(by=['행정동명','연월'], ascending=True).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "131dd661-beb9-4781-95c6-d699de6c12e0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1368ed2d-9ab7-457d-b2d3-65efca849780",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 수집 결과 csv로 저장\n",
     "data.to_csv('pop.csv', index=False, encoding='utf-8')"
    ]
